--- a/src/package.json
+++ b/src/package.json
@@ -25,6 +25,8 @@
     "@ngrx/store-devtools": "^14.0.1",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "apexcharts": "^3.35.4",
+    "ng-apexcharts": "^1.7.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
