--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,10 +41,10 @@ jobs:
         run: |
           npm i
           npm i @angular/cli -g
-      - name: Compile Angular app with Test config
-        working-directory: src
-        run: |
-          ng build --configuration test --output-path ./test-published
+      # - name: Compile Angular app with Test config
+      #   working-directory: src
+      #   run: |
+      #     ng build --configuration test --output-path ./test-published
       - name: Compile Angular app with Prod config
         working-directory: src
         run: |
